# photo-print-tool

./: .dockerignore  .gitignore  .prettierrc  DESIGN.md  Dockerfile  PRODUCT.md  README.md  eslint.config.js  index.html  package.json  translation-issues.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.agents/context/: settings-redesign-brief.md
.impeccable/: design.json
.impeccable/critique/: 2026-07-14T18-56-00Z__src-app-tsx.md  2026-07-21T17-03-17Z__print-settings-print-settings-layout-category-tsx.md
desktop/: CMakeLists.txt
desktop/src/: bridge.h  bridge.mm  main.mm  printer.h  printer_macos.mm
docker/: nginx.conf
docs/: developer-guide.md
docs/001-electrobun-implementation/: README.md
docs/002-electrobun-printer-bridge/: README.md
docs/003-desktop-native-port/: README.md
public/: site.webmanifest
scripts/: check-translations.ts  dev-desktop.sh
src/: App.tsx  i18n.ts  index.css  main.tsx  print.css  vite-env.d.ts
src/components/: app-header.tsx
src/components/panels/: photos-panel.tsx  preview-panel.tsx  print-settings-panel.tsx  print-settings-profiles-section.tsx
src/components/print/: print-pages.tsx  print-review-dialog.tsx
src/context/: native-print-context.ts  native-print-provider.tsx  print-job-context.ts  print-job-provider.tsx
src/hooks/: use-print-job-context.ts  use-print-job.ts
src/lib/: analytics.ts  custom-presets-storage.ts  layout-presets.ts  native-print.ts  paper-presets.ts  print-layout.ts  print-sizes.ts  units.ts
src/locales/: en-us.json  es-latam.json
src/types/: print.ts
(+12 files in other folders)
